--- a/style.css
+++ b/style.css
@@ -28,12 +28,20 @@ h1, h2 {
 
 #content-container {
 	width: 100%;
+	margin-bottom: 50;
+}
+#video {
+
+	margin-left: 320;
+/*	margin-left: auto;
+	margin-right:auto;*/
 }
 
 #container {	
 	margin-left: auto;
 	margin-right:auto;
 }
+
 
 .image-holder{
 	display: inline;
@@ -43,6 +51,31 @@ h1, h2 {
 
 }
 
+#footer {
+	display: block;
+	background-color: #000000;
+	width:100%;
+	height: 200;
+}
+#captureButton {
+	position: relative;
+/*margin-bottom: 50;*/
+}
+
+
 p {
 
+}
+
+.buttons{
+	display: inline-block;
+	background-color: #FFFFFF;
+	/*text-align: center;*/
+	margin: 0.5em;
+	padding: 0.7em 1.1em;
+	/*border: 3px solid #b3b9bf;*/
+	border: 3px solid #000000;
+
+	/*color: #b3b9bf;*/
+	font-weight: 700;
 }
