--- a/style.css
+++ b/style.css
@@ -5,11 +5,6 @@ body {
 }
 
 h1, h2 {
-/*	background-color: #000000;
-	color: #f9f9f9;*/
-
-	/*margin-top: 0; */
-	
 	font-size: 40px;
 	text-transform: uppercase;
 	text-align: center; 
@@ -18,64 +13,67 @@ h1, h2 {
 	line-height: 2;
 }
 
-#top-stripe{
-	display: block;
+#stripe{
 	background-color: #000000;
-
 	width: 100%;
-	height: 8px;
+	height: 6px;
 }
 
 #content-container {
 	width: 100%;
 	margin-bottom: 50;
 }
-#video {
 
-	margin-left: 320;
-/*	margin-left: auto;
-	margin-right:auto;*/
-}
-
-#container {	
+#gif-container {	
 	margin-left: auto;
 	margin-right:auto;
 }
 
-
 .image-holder{
 	display: inline;
-	padding: 2px;
-	width:400px;
-	height:300px;
+}
 
+#camera{
+	width:100%;
+	height: 500px;
+}
+
+#video-holder{
+	position: fixed;
+	background-color: #94ffab;
+	width:660px;
+	height:500px;
+	border: 2px;
+
+	left:50%;
+	margin: 0 0 0 -325px;
+}
+
+#video{
+	position: relative;
+	margin: 10px 0 0 10px;
 }
 
 #footer {
 	display: block;
-	background-color: #000000;
+	background-color: #94ffab;
 	width:100%;
-	height: 200;
+	height: 150px;
 }
-#captureButton {
+
+#button-div{
 	position: relative;
-/*margin-bottom: 50;*/
-}
-
-
-p {
-
+	width:124px;
+	height:34px;
+	margin-left:auto;
+	margin-right:auto;
+	top:45%;
 }
 
 .buttons{
-	display: inline-block;
 	background-color: #FFFFFF;
-	/*text-align: center;*/
-	margin: 0.5em;
+	text-transform: uppercase;
 	padding: 0.7em 1.1em;
-	/*border: 3px solid #b3b9bf;*/
 	border: 3px solid #000000;
-
-	/*color: #b3b9bf;*/
 	font-weight: 700;
 }
