--- a/style.css
+++ b/style.css
@@ -1,36 +1,43 @@
 body {
 	font-family: 'Lato', Arial, sans-serif;
-	background-color: #f9f9f9;
+	background-color: #F8F7F6;
 	margin: 0; 
 }
 
 h1, h2 {
-	font-size: 40px;
+	/*-webkit-text-stroke: 1px #20EEE1;*/
+	width: 100%;
+	height: 120px;
+	font-size: 3em;
+	/*padding-top: 20px;*/
 	text-transform: uppercase;
 	text-align: center; 
-	font-weight: 200;
+	font-weight: 300;
 	letter-spacing: 3;
 	line-height: 2;
 }
 
 #stripe{
-	background-color: #000000;
+	background: #FFFFFF;
 	width: 100%;
-	height: 6px;
+	height: 15px;
 }
 
 #content-container {
 	width: 100%;
 	margin-bottom: 50;
+
 }
 
 #gif-container {	
 	margin-left: auto;
 	margin-right:auto;
+	border: solid #FFFFFF 15px;	/* teal border */
 }
 
 .image-holder{
 	display: inline;
+	/*border: solid #FFFFFF 2px;*/
 }
 
 #camera{
@@ -39,41 +46,64 @@ h1, h2 {
 }
 
 #video-holder{
-	position: fixed;
-	background-color: #94ffab;
-	width:660px;
-	height:500px;
-	border: 2px;
+	position: absolute;
+	/*background-color: #E5E3DF; 	/* grey background color */
 
+	background-color: #000000;
+	border: solid #FFFFFF 15px;	/* teal border */
+	width:640px;
+	height:480px;
+	
+	/* keep it in the middle of the screen */
 	left:50%;
-	margin: 0 0 0 -325px;
+	margin: 0 0 0 -320px;
 }
 
 #video{
-	position: relative;
-	margin: 10px 0 0 10px;
 }
 
 #footer {
 	display: block;
-	background-color: #94ffab;
+	background: #FFFFFF;
+	border-bottom: solid #B2B2B2 4px;
 	width:100%;
 	height: 150px;
 }
 
-#button-div{
-	position: relative;
-	width:124px;
-	height:34px;
-	margin-left:auto;
-	margin-right:auto;
-	top:45%;
+#button-holder{
+	position: absolute;
+	top:50%;
 }
 
-.buttons{
-	background-color: #FFFFFF;
+.btn {
+	-webkit-border-radius: 0;
+	-moz-border-radius: 0;
+	position: absolute;
+	width:200px;
+	height:40px;
+	color:#FFFFFF;
+	border: solid #FFFFFF 1px;
+	background-color: transparent;
+	font-size: 1em;
+	letter-spacing: .1em;
 	text-transform: uppercase;
-	padding: 0.7em 1.1em;
-	border: 3px solid #000000;
-	font-weight: 700;
+	text-align: center;
+	font-weight: 400;
+	left: 50%;
+	top:50%;
+	margin: -20px 0 0 -100px;
+}
+
+.btn:hover {
+	border: solid #FFFFFF 1px;
+	background: #f618c7;
+}
+
+.btn:focus {
+	outline:0 !important;
+}
+
+.btn:active {
+	outline: none;
+	border: none;
 }
